# openclaw-capture-workflow

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  TASK_STATUS.md  config.example.json  pyproject.toml
docs/: ACCURACY_BASELINE.md  ARCHITECTURE.md  LINK_UNDERSTANDING_DEVELOPMENT.md  LIVE_VALIDATION.md  NEXT_SESSION_HANDOFF.md  SESSION_RESTORE_20260313.md  TECHNICAL_HANDOFF.md
prompts/: learning_note_system.md
scripts/: accuracy_eval_cases.enumerated_videos.json  accuracy_eval_cases.example.json  accuracy_eval_cases.multitype.json  accuracy_eval_cases.new_videos.json  accuracy_eval_cases.xhs.json  cleanup_obsidian.py  compare_native_vs_skill_summary.py  compare_obsidian_write_effect.py  install_skill.sh  iterative_recognition_cases.json  merge_auto_cases.py  ocr_image.swift  rebuild_random15_obsidian.py  report_video_capabilities.py  robot_ingest_regression_cases.json  run_accuracy_eval.py  run_iterative_recognition.py  run_live_validation.py  run_progressive_validation.py  run_robot_payload_replay.py  run_stability_validation.py  run_video_truth_validation.py  video_audio_asr.py  video_audio_asr_apple.swift  video_keyframes_extract.py  video_subtitle_extract.py
tests/: test_accuracy_eval.py  test_analyzer_cleanup.py  test_analyzer_dom_extract.py  test_analyzer_llm.py  test_analyzer_models.py  test_analyzer_render.py  test_analyzer_video.py  test_api.py  test_cli_analyze_url.py  test_config.py  test_extractor.py  test_iterative_cases.py  test_iterative_runner.py  test_note_renderer.py  test_obsidian.py  test_processor.py  test_processor_validation.py  (+8 more)
(+32 files in other folders)
