[project]
name = "openclaw-capture-workflow"
version = "0.1.0"
description = "Local ingestion workflow for OpenClaw to summarize content, write Obsidian notes, and notify Telegram groups."
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]

[project.scripts]
openclaw-capture-workflow = "openclaw_capture_workflow.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
