[project]
name = "openclaw-capture-workflow"
version = "0.1.0"
description = "Local ingestion workflow for OpenClaw to summarize content, write Obsidian notes, and notify Telegram groups."
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "playwright>=1.50,<2",
  "uvicorn>=0.34,<1",
]

[project.scripts]
openclaw-capture-workflow = "openclaw_capture_workflow.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
